[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PizzaShop.gd" type="Script" id=1]
[ext_resource path="res://scenes/PizzaStation.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ovens.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Deliveries.tscn" type="PackedScene" id=5]

[node name="PizzaShop" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.172549, 0.427451, 0.905882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
margin_left = 59.0
margin_top = 291.0
margin_right = 156.0
margin_bottom = 311.0
text = "go to counter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeliveriesButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
margin_left = 646.124
margin_top = 153.035
margin_right = 746.124
margin_bottom = 173.035
text = "deliver pizzas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
visible = false
margin_left = 156.0
margin_top = 549.0
margin_right = 257.0
margin_bottom = 569.0
text = "answer phone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PizzaStationButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
margin_left = 477.0
margin_top = 547.0
margin_right = 578.0
margin_bottom = 567.0
text = "go to pizza station"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OvensButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
margin_left = 871.0
margin_top = 303.0
margin_right = 1000.0
margin_bottom = 323.0
text = "go to ovens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfficeButton" type="Button" parent="." groups=[
"shop_location_buttons",
]]
margin_left = 875.0
margin_top = 526.0
margin_right = 1004.0
margin_bottom = 546.0
text = "go to office"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="locations" type="Node2D" parent="."]

[node name="PizzaStation" parent="locations" instance=ExtResource( 2 )]
position = Vector2( 1544.32, 265.872 )

[node name="Ovens" parent="locations" instance=ExtResource( 3 )]
position = Vector2( 1320.02, 1126.95 )

[node name="Counter" parent="locations" instance=ExtResource( 4 )]
position = Vector2( 14.1788, 1121.77 )

[node name="Deliveries" parent="locations" instance=ExtResource( 5 )]
position = Vector2( -1169.65, 1001.54 )

[node name="CurrentSceneCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="OpenOrdersLabel" type="RichTextLabel" parent="."]
margin_left = 290.894
margin_top = 80.8664
margin_right = 490.894
margin_bottom = 440.866
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceLabel" type="Label" parent="."]
margin_left = 11.9058
margin_top = 11.6738
margin_right = 51.9058
margin_bottom = 25.6738
text = "Moneys"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balance" type="Label" parent="."]
margin_left = 76.0293
margin_top = 13.2128
margin_right = 116.029
margin_bottom = 27.2128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldPopulationLabel" type="Label" parent="."]
margin_left = 205.302
margin_top = 10.1348
margin_right = 277.302
margin_bottom = 24.1348
text = "Population:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldPopulation" type="Label" parent="."]
margin_left = 281.737
margin_top = 8.59585
margin_right = 321.737
margin_bottom = 22.5958
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentDate" type="Label" parent="."]
margin_left = 832.783
margin_top = 9.53999
margin_right = 872.783
margin_bottom = 23.54
__meta__ = {
"_edit_use_anchors_": false
}
